force-app/main/default/objects/CriterioCalificacionCliente__mdt/CriterioCalificacionCliente__mdt.object-meta.xml
<CustomObject>
    <label>Criterio Calificacion Cliente</label>
    <pluralLabel>Criterios Calificacion Clientes</pluralLabel>
</CustomObject>