force-app/main/default/objects/CriterioCalificacionCliente__mdt/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <label>Clasificacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
                <default>true</default>
                <label>Ninguno</label>
            </value>
            <value>
                <fullName>Tipo Persona</fullName>
                <label>Tipo de persona</label>
            </value>
            <value>
                <fullName>Tipo Cliente</fullName>
                <label>Tipo de cliente</label>
            </value>
            <value>
                <fullName>Doc. Identidad</fullName>
            </value>
            <value>
                <fullName>Tipo Relación</fullName>
                <label>Tipo Relacion Economica</label>
            </value>
            <value>
                <fullName>Nivel Organizacional</fullName>
            </value>
            <value>
                <fullName>Profesión</fullName>
            </value>
            <value>
                <fullName>Ocupación</fullName>
            </value>
            <value>
                <fullName>Actividad Economica</fullName>
            </value>
            <value>
                <fullName>Canal Contrata</fullName>
            </value>
            <value>
                <fullName>Sucursal</fullName>
            </value>
            <value>
                <fullName>Forma de pago</fullName>
            </value>
            <value>
                <fullName>Tipo de transacción</fullName>
            </value>
            <value>
                <fullName>Responsable del pago</fullName>
            </value>
            <value>
                <fullName>Origen de los fondo</fullName>
            </value>
            <value>
                <fullName>Procedencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>